--- a/views/editphoto.ejs
+++ b/views/editphoto.ejs
@@ -1,5 +1,7 @@
 <%- include('header.ejs') %>
 
+<body>
+
 <div class="home">
 
     <div class="homeheader box">
@@ -45,5 +47,8 @@
     };
 
 </script>
+
+</body>
+</html>
 
 <%- include('footer.ejs') %>
