--- a/views/finduser.ejs
+++ b/views/finduser.ejs
@@ -1,5 +1,7 @@
 <%- include('header.ejs') %>
 
+<body>
+
 <%- include('nav.ejs') %>
 
 <div class="fudiv box">
@@ -96,5 +98,8 @@
 </script>    
 
 <%- include('socially.ejs') %>
+
+</body>
+</html>
 
 <%- include('footer.ejs') %>
