--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,7 @@
 <%- include('header.ejs') %>
 
+<body>
+
 <div class="indexpage">
 
     <div class="box indexheader">
@@ -47,5 +49,8 @@
     }
     }
 </script>
+
+</body>
+</html>
 
 <%- include('footer.ejs') %>
