--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,5 +1,7 @@
 <%- include('header.ejs') %>
 
+<body>
+
 <%- include('nav.ejs') %>
 
 <div class="box">
@@ -13,5 +15,8 @@
 </div>
 
 <%- include('socially.ejs') %>
+
+</body>
+</html>
 
 <%- include('footer.ejs') %>
