--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,5 +1,7 @@
 <%- include('header.ejs') %>
 
+<body>
+
 <%- include('nav.ejs') %>
 
 <div class="box profile">
@@ -68,5 +70,8 @@ function Letgo(){
 </script>
 
 <%- include('socially.ejs') %>
+
+</body>
+</html>
 
 <%- include('footer.ejs') %>
