--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,5 +1,7 @@
 <%- include('header.ejs') %>
 
+<body>
+
 <%- include('nav.ejs') %>
 
 <div class="box notification">
@@ -44,5 +46,8 @@
 </div>
 
 <%- include('socially.ejs') %>
+
+</body>
+</html>
 
 <%- include('footer.ejs') %>
