--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,7 +41,7 @@ h1, h3{
 }
 
 .indexform{
-    padding-left: 30%;
+    padding-left: 35%;
 }
 
 .indexform input[type=submit]{
@@ -455,3 +455,10 @@ input[type=submit]{
     font-family: 'Caveat', cursive;
     font-size: 125%;
 }
+
+@media only screen and (max-width: 800px) {
+    body {
+        margin: 0 10%;
+        width: 80vw;
+    }
+  }
