--- a/views/detailpost.ejs
+++ b/views/detailpost.ejs
@@ -1,5 +1,7 @@
 <%- include('header.ejs') %>
 
+<body>
+
 <%- include('nav.ejs') %>
 
 <div class="box">
@@ -80,5 +82,8 @@
 </script>    
 
 <%- include('socially.ejs') %>
+
+</body>
+</html>
 
 <%- include('footer.ejs') %>
