--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,5 +1,7 @@
 <%- include('header.ejs') %>
 
+<body>
+
 <div class="home">
 
     <div class="homeheader box">
@@ -47,5 +49,8 @@
     </div>
 
 </div>
+
+</body>
+</html>
 
 <%- include('footer.ejs') %>
