--- a/views/viewfriends.ejs
+++ b/views/viewfriends.ejs
@@ -1,5 +1,7 @@
 <%- include('header.ejs') %>
 
+<body>
+
 <%- include('nav.ejs') %>
 
 <div class="box searchdiv">
@@ -39,5 +41,8 @@
 </div>
 
 <%- include('socially.ejs') %>
+
+</body>
+</html>
 
 <%- include('footer.ejs') %>
